apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8096
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: jellyfin
subsets:
  - addresses:
      - ip: 192.168.68.60
    ports:
      - name: http
        port: 8096
        protocol: TCP
